--- a/config/sofle.conf
+++ b/config/sofle.conf
@@ -5,7 +5,8 @@
 CONFIG_ZMK_DISPLAY=y
 
 #CONFIG_ZMK_RGB_UNDERGLOW=y
+#CONFIG_WS2812_STRIP=y
 
 #Uncomment these two lines to add support for encoders
-# CONFIG_EC11=ys
-# CONFIG_EC11_TRIGGER_GLOBAL_THREAD=y
+CONFIG_EC11=ys
+CONFIG_EC11_TRIGGER_GLOBAL_THREAD=y
