--- a/config/sofle.conf
+++ b/config/sofle.conf
@@ -5,6 +5,7 @@
 CONFIG_ZMK_DISPLAY=y
 
 CONFIG_ZMK_RGB_UNDERGLOW=y
+CONFIG_ZMK_RGB_UNDERGLOW_AUTO_OFF_IDLE=y
 CONFIG_WS2812_STRIP=y
 
 #Uncomment these two lines to add support for encoders
