--- a/config/sofle.conf
+++ b/config/sofle.conf
@@ -9,5 +9,9 @@ CONFIG_ZMK_RGB_UNDERGLOW_AUTO_OFF_IDLE=y
 CONFIG_WS2812_STRIP=y
 
 #Uncomment these two lines to add support for encoders
-CONFIG_EC11=ys
+CONFIG_EC11=y
 CONFIG_EC11_TRIGGER_GLOBAL_THREAD=y
+
+# This is needed to resolve the RHS glitch on wake from sleep
+CONFIG_ZMK_DISPLAY_WORK_QUEUE_DEDICATED=y
+
