--- a/config/sofle.conf
+++ b/config/sofle.conf
@@ -1,16 +1,22 @@
 # Copyright (c) 2020 Ryan Cross
 # SPDX-License-Identifier: MIT
 
-# Uncomment the following line to enable the Sofle OLED Display
-CONFIG_ZMK_DISPLAY=y
 
+# RBG underglow related
 CONFIG_ZMK_RGB_UNDERGLOW=y
 CONFIG_ZMK_RGB_UNDERGLOW_AUTO_OFF_IDLE=y
 CONFIG_WS2812_STRIP=y
 
-#Uncomment these two lines to add support for encoders
+
+# Uncomment these two lines to add support for encoders
 CONFIG_EC11=y
 CONFIG_EC11_TRIGGER_GLOBAL_THREAD=y
+
+
+# Display related configs
+CONFIG_ZMK_DISPLAY=y
+CONFIG_ZMK_WIDGET_BATTERY_STATUS_SHOW_PERCENTAGE=y
+
 
 # This is needed to resolve the RHS glitch on wake from sleep
 CONFIG_ZMK_DISPLAY_WORK_QUEUE_DEDICATED=y
